# specterra

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
ejemplos/: ejemplo_basico.py
src/specterra/: __init__.py  core.py
