[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "specterra"
version = "0.1.0"
description = "Procesamiento de imágenes satelitales multiespectrales para exploración mineral"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "terraf360", email = "your.email@example.com"}
]
keywords = ["satellite", "remote-sensing", "landsat", "sentinel", "spectral-indices", "mineral-exploration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "rasterio>=1.2.0",
    "matplotlib>=3.3.0",
    "scipy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/terraf360/specterra"
Repository = "https://github.com/terraf360/specterra"
Documentation = "https://github.com/terraf360/specterra#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
specterra = ["py.typed"]
